batfish.dockerfile: upgrade to java11